--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,24 @@ server:
 spring:
   application:
     name: jubilee-microservice
-  #profiles:
-    #active: default
+  profiles:
+    active: default
+  
+  jpa:
+    show-sql: true   
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.Oracle10gDialect
+
+  datasource:
+    driver:
+      class: oracle.jdbc.driver.OracleDriver
+    url: ${spring.datasource.url}
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+
   cloud:
     config:
       #label: master
@@ -16,9 +32,10 @@ spring:
         multiplier: 1.5
       discovery:
         enabled: true
-    loadbalancer:
-      ribbon:
-        enabled: false
+    # loadbalancer:
+    #   ribbon:
+    #     enabled: false
+  
 
         
 eureka:
