Push soap started. More tests required. Some refactoring kiasi

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,15 @@ spring:
   profiles:
     active: default
   
+  #spring.jpa.properties.hibernate.jdbc.batch_size=5
+
   jpa:
     show-sql: true   
     hibernate:
       ddl-auto: none
+      jdbc:
+        batch_size: 50
+
     properties:
       hibernate:
         dialect: org.hibernate.dialect.Oracle10gDialect
