--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: jubilee-microservice
+    name: integ-ms-aarpro-edi
   profiles:
     active: default
   
@@ -71,7 +71,7 @@ eureka:
       register-with-eureka: true
       fetch-registry: true
       serviceUrl:
-         defaultZone: http://192.180.3.78:8761/eureka
+         defaultZone:  http://localhost:8761/eureka
       instance:
         preferIpAddress: true        
         #hostname: localhost
