--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     config:
 #      uri: http://192.180.4.106:8888 
       uri: http://127.0.0.1:8888 
-      name: aar-provider
+      name: aar-prov-edi-microservice
       username: config
       password: config123   
       fail-fast: true   
