--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.smart</groupId>
-    <artifactId>integ-ms-aarpro-edi</artifactId>
+    <artifactId>integ-ms-aarprov-edi</artifactId>
     <version>beta</version>
-    <name>INTEG-MICROSERVICE-AARPRO-EDI</name>
-    <description>FECTH CLAIMS FROM AAR PROVIDER AND DELIVER TO EDI</description>
+    <name>INTEG-MS-AARPROV-EDI</name>
+    <description>deliver claims from aar provider kenya to EDI.</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,21 +21,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>6.1.0.jre8</version>
-        </dependency> 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <version>6.4.0.jre8</version>
             <scope>runtime</scope>
-        </dependency> 
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -131,12 +121,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
-            <type>jar</type>
-        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -161,3 +145,6 @@
     </build>
 
 </project>
+
+ 
+
