--- a/src/main/resources/aarprov-edi-microservice-production.properties
+++ b/src/main/resources/aarprov-edi-microservice-production.properties
@@ -1,50 +1,37 @@
-# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost/mydb
-spring.datasource.username=root
-spring.datasource.password=root
+app.title=Abacus Crud API
+app.message=Hello World
 
-spring.datasource.tomcat.test-on-borrow=true
-spring.datasource.tomcat.validation-query=SELECT 1
-spring.datasource.sql-script-encoding=UTF-8
-
-# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.openInView=true
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
-
-
-# Jackson Configs
-spring.jackson.property-naming-strategy=SNAKE_CASE
-spring.jackson.serialization.write-dates-as-timestamps=false
-spring.jackson.serialization.fail-on-empty-beans=false
-spring.jackson.parser.allow-unquoted-control-chars=true
-
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-
-project.version= @project.version@
-
+#ABACUS DEV
+#abacus.datasource.url=jdbc:oracle:thin:@//pdb-dev.smart.co.ke:1521/abacus_ke
+#abacus.datasource.username=abacus
+#abacus.datasource.password=Abacus_smt_#2017
 
 #ABACUS PROD
-abacus.prod.datasource.url=jdbc:oracle:thin:@//pdb.smart.co.ke:1521/abacus
-abacus.prod.datasource.username=abacus
-abacus.prod.datasource.password=A$k#S#20_xTg#Sm175KE
+#abacus.datasource.url=jdbc:oracle:thin:@//pdb.smart.co.ke:1521/abacus
+#abacus.datasource.username=smartinternal
+#abacus.datasource.password=SMInt#OCt2016
+
+# Primary DataSource configuration2 
+#datasource.akuh.jdbc-url=jdbc:oracle:thin:@//192.180.3.14:1515/carepro 
+#datasource.akuh.username=smart
+#datasource.akuh.password=smart
+#datasource.akuh.driver-class-name=oracle.jdbc.OracleDriver
+# Any of the other Spring supported properties below...
+
+#ABACUS PROD
+abacus.datasource.url=jdbc:oracle:thin:@//pdb.smart.co.ke:1521/abacus
+abacus.datasource.username=abacus
+abacus.datasource.password=A$k#S#20_xTg#Sm175KE
 
 # #INTEG DEV
-integ.datasource.url=jdbc:oracle:thin:@//pdb-dev.smart.co.ke:1521/integstaging
-integ.datasource.username=INTERACTIVE
-integ.datasource.password=INTERACTIVE_#2017
-
-#INTEG PROD 
-#integ.datasource.url=jdbc:oracle:thin:@//pdb.smart.co.ke:1521/integstaging
+#integ.datasource.url=jdbc:oracle:thin:@//pdb-dev.smart.co.ke:1521/integstaging
 #integ.datasource.username=INTERACTIVE
-#integ.datasource.password=Re$cT9_#A_P0202
-
+#integ.datasource.password=INTERACTIVE_#2017
  
 # # #INTEG QA
-#integ.datasource.url=jdbc:oracle:thin:@//pdb-qa.smart.co.ke:1521/integstaging
-#integ.datasource.username=INTERACTIVE
-#integ.datasource.password=Re$cT9_#A_P0202
+integ.datasource.url=jdbc:oracle:thin:@//pdb-qa.smart.co.ke:1521/integstaging
+integ.datasource.username=INTERACTIVE
+integ.datasource.password=Re$cT9_#A_P0202
 
 # integ.jpa.hibernate.ddl-auto=update
 # integ.datasource.url=jdbc:mysql://localhost:3306/aar_provider?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
@@ -56,7 +43,12 @@ integ.datasource.password=INTERACTIVE_#2017
 
 # # Hibernate ddl auto (create, create-drop, validate, update)
 # aar.jpa.hibernate.ddl-auto = update
-  
+ 
+
+aar.datasource.url=jdbc:sqlserver://192.180.3.14:7004;databaseName=smart_eclaims
+aar.datasource.username=smart1
+aar.datasource.password=smart2035!
+aar.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 url.post.claim.edi=https://data.smartapplicationsgroup.com/api/v2/prod/provider/integration?country_code=KE&integ_app_code=AARPRODT6HFYU25YT3WGIYI6&prov_code=SKSP_301
 # https://data.smartapplicationsgroup.com/api/v2/prod/provider/integration?country_code=KE&integ_app_code=AARPRODT6HFYU25YT3WGIYI6&PROV_CODE=SKSP_301
